kubernetes/knative/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    pod-security.kubernetes.io/enforce: baseline #restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: baseline #restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: baseline #restricted
    pod-security.kubernetes.io/audit-version: latest
    app.kubernetes.io/instance: knative
    kubernetes.io/metadata.name: knative-operator
  name: knative-operator
---
# Operator Bug, Keeps overwriting the namespace labels/annotations
# apiVersion: v1
# kind: Namespace
# metadata:
#   annotations:
#     argocd.argoproj.io/sync-wave: "0"
#   labels:
#     app.kubernetes.io/instance: knative
#     kubernetes.io/metadata.name: knative-serving
#   name: knative-serving
